# CreatorCrisis

./: DockerFile  README.md  baseline.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh  ui.py
adversarial/: __init__.py  checks.py
engine/: __init__.py  reward_shaper.py  user_sim.py
server/: api.py  app.py  environment.py
