# pyproject.toml — CreatorCrisisEnv
# Required by `openenv validate` for multi-mode deployment readiness.
# Meta OpenEnv Hackathon | Author: Jashandeep Singh

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-creator-crisis-env"
version = "1.0.0"
description = "Creator Crisis Env — Dual-objective Trust & Safety RL Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # OpenEnv runtime (mandatory for openenv validate)
    "openenv-core[core]>=0.2.2",
    # RL environment core
    "gymnasium==0.29.1",
    "numpy>=1.24.0",
    # Data validation
    "pydantic>=2.0.0",
    # API server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # UI
    "gradio>=4.0.0",
    # LLM client
    "openai>=1.12.0",
    # HTTP
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point — enables: uv run server
# Also satisfies openenv validate [project.scripts] check
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server", "engine", "adversarial"]
package-dir = { "" = "." }
